FFMpeg: update streams from context

The some codecs need to propagate metadata to the container, most
notably AAC needs to set the Low Complexity profile tag so play with
certain media players.

Fixes: QTBUG-132463
Change-Id: Ie09b09d4eaa97961b6a18092e76c2422a57b0735
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit afbb68f9dc50648ee7c566a865c2a2bc8b000e07)
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>