src/plugins/multimedia/ffmpeg/recordingengine/qffmpegvideoframeencoder.cpp
@@ -184,6 +184,8 @@ bool QFFmpeg::VideoFrameEncoder::initCodecContext(AVFormatContext *formatContext
             m_codecContext->hw_frames_ctx = av_buffer_ref(framesContext);
     }
 
+    avcodec_parameters_from_context(m_stream->codecpar, m_codecContext.get());
+
     return true;
 }
 
